@@ -120,6 +120,7 @@ module ActiveRecord
         end
         
         def user_options
+          return {} if sqlserver_azure?
           info_schema_query do
             select_rows("dbcc useroptions").inject(HashWithIndifferentAccess.new) do |values,row| 
               set_option = row[0].gsub(/\s+/,'_')
@@ -129,10 +130,45 @@ module ActiveRecord
             end
           end
         end
+        
+        def user_options_dateformat
+          if sqlserver_azure?
+            info_schema_query { select_value "SELECT [dateformat] FROM [sys].[syslanguages] WHERE [langid] = @@LANGID" }
+          else
+            user_options['dateformat']
+          end
+        end
+        
+        def user_options_isolation_level
+          if sqlserver_azure?
+            info_schema_query do
+              sql = %|SELECT CASE [transaction_isolation_level] 
+                      WHEN 0 THEN NULL
+                      WHEN 1 THEN 'READ UNCOMITTED' 
+                      WHEN 2 THEN 'READ COMITTED' 
+                      WHEN 3 THEN 'REPEATABLE' 
+                      WHEN 4 THEN 'SERIALIZABLE' 
+                      WHEN 5 THEN 'SNAPSHOT' END AS [isolation_level] 
+                      FROM [sys].[dm_exec_sessions] 
+                      WHERE [session_id] = @@SPID|.squish
+              select_value(sql)
+            end
+          else
+            user_options['isolation_level']
+          end
+        end
+        
+        def user_options_language
+          if sqlserver_azure?
+            info_schema_query { select_value "SELECT @@LANGUAGE AS [language]" }
+          else
+            user_options['language']
+          end
+        end
 
         def run_with_isolation_level(isolation_level)
           raise ArgumentError, "Invalid isolation level, #{isolation_level}. Supported levels include #{valid_isolation_levels.to_sentence}." if !valid_isolation_levels.include?(isolation_level.upcase)
-          initial_isolation_level = user_options[:isolation_level] || "READ COMMITTED"
+          initial_isolation_level = user_options_isolation_level || "READ COMMITTED"
           do_execute "SET TRANSACTION ISOLATION LEVEL #{isolation_level}"
           begin
             yield 
